--- a/user_guide.ipynb
+++ b/user_guide.ipynb
@@ -28,8 +28,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sys\n",
-    "#sys.path.append('C:/Users/Anna/Documents/Matching-Predicting-Scientific-Variables')\n",
-    "sys.path.append('C:/Users/AND522/Documents/Matching-Predicting-Scientific-Variables/')\n",
+    "sys.path.append('C:/Users/Anna/Documents/Matching-Predicting-Scientific-Variables/')\n",
+    "#sys.path.append('C:/Users/AND522/Documents/Matching-Predicting-Scientific-Variables/')\n",
     "from main import nn_train, train_classifier, app_load_models, user_input_loop"
    ]
   },
@@ -1418,24 +1418,252 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Running the user input loop to make predictions"
+    "## 3. Running the user input loop to make predictions\n",
+    "\n",
+    "Enter a string composed of scientific properties and/or units to predict a match for them in the vocabulary. A list of ten ranked results for each will be returned, with associated url, abbreviation, and suggested unit, if relevant. Missing values will be displayed as NaN. Attempts were made to make these results look decent, but the best display will be given by running the web application. \n",
+    "\n",
+    "Enter 'xxx' to stop the cell."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a string to predict:wind speed km hr\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>processed_name</th>\n",
+       "      <th>proper_name</th>\n",
+       "      <th>suggested_unit</th>\n",
+       "      <th>suggested_unit_url</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>wind speed</td>\n",
+       "      <td>wind speed</td>\n",
+       "      <td>Kilometer per Hour</td>\n",
+       "      <td>http://registry.it.csiro.au/def/qudt/1.1/qudt-...</td>\n",
+       "      <td>http://registry.it.csiro.au/def/environment/pr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>wind direction</td>\n",
+       "      <td>wind direction</td>\n",
+       "      <td>Degree Angle</td>\n",
+       "      <td>http://registry.it.csiro.au/def/qudt/1.1/qudt-...</td>\n",
+       "      <td>http://registry.it.csiro.au/def/environment/pr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>maximum wind gust</td>\n",
+       "      <td>maximum wind gust</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>wind velocity</td>\n",
+       "      <td>wind velocity</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>carbon concentration</td>\n",
+       "      <td>carbon concentration</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://registry.it.csiro.au/def/environment/pr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>oxygen concentration</td>\n",
+       "      <td>oxygen concentration</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://registry.it.csiro.au/def/environment/pr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>water temperature</td>\n",
+       "      <td>water temperature</td>\n",
+       "      <td>Degree Celsius</td>\n",
+       "      <td>http://qudt.org/vocab/unit#DegreeCelsius</td>\n",
+       "      <td>http://registry.it.csiro.au/def/environment/pr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>nitrogen concentration</td>\n",
+       "      <td>nitrogen concentration</td>\n",
+       "      <td>Milligrams Per Litre | Milligrams Per Cubic Me...</td>\n",
+       "      <td>http://registry.it.csiro.au/def/environment/un...</td>\n",
+       "      <td>http://registry.it.csiro.au/def/environment/pr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>hydrocarbon concentration</td>\n",
+       "      <td>hydrocarbon concentration</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://registry.it.csiro.au/def/environment/pr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>phosphorus concentration</td>\n",
+       "      <td>phosphorus concentration</td>\n",
+       "      <td>Milligrams Per Litre</td>\n",
+       "      <td>http://registry.it.csiro.au/def/environment/un...</td>\n",
+       "      <td>http://registry.it.csiro.au/def/environment/pr...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>abbreviation</th>\n",
+       "      <th>processed_name</th>\n",
+       "      <th>proper_name</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>km</td>\n",
+       "      <td>kilometer</td>\n",
+       "      <td>Kilometer</td>\n",
+       "      <td>http://registry.it.csiro.au/def/qudt/1.1/qudt-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>km/hr</td>\n",
+       "      <td>kilometer per hour</td>\n",
+       "      <td>Kilometer per Hour</td>\n",
+       "      <td>http://registry.it.csiro.au/def/qudt/1.1/qudt-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>km/s</td>\n",
+       "      <td>kilometer per second</td>\n",
+       "      <td>Kilometer per Second</td>\n",
+       "      <td>http://registry.it.csiro.au/def/qudt/1.1/qudt-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>km^3/s^2</td>\n",
+       "      <td>cubic kilometer per second squared</td>\n",
+       "      <td>Cubic Kilometer per Second Squared</td>\n",
+       "      <td>http://registry.it.csiro.au/def/qudt/1.1/qudt-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>J/(km-K-Pa)</td>\n",
+       "      <td>joule per kilogram kelvin per pascal</td>\n",
+       "      <td>Joule per Kilogram Kelvin per Pascal</td>\n",
+       "      <td>http://registry.it.csiro.au/def/qudt/1.1/qudt-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>hr</td>\n",
+       "      <td>hour</td>\n",
+       "      <td>Hour</td>\n",
+       "      <td>http://registry.it.csiro.au/def/qudt/1.1/qudt-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ft/hr</td>\n",
+       "      <td>foot per hour</td>\n",
+       "      <td>Foot per Hour</td>\n",
+       "      <td>http://registry.it.csiro.au/def/qudt/1.1/qudt-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Btu/hr</td>\n",
+       "      <td>btu per hour</td>\n",
+       "      <td>BTU per Hour</td>\n",
+       "      <td>http://registry.it.csiro.au/def/qudt/1.1/qudt-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>lb/hr</td>\n",
+       "      <td>pound per hour</td>\n",
+       "      <td>Pound per Hour</td>\n",
+       "      <td>http://registry.it.csiro.au/def/qudt/1.1/qudt-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>degF-hr</td>\n",
+       "      <td>degree fahrenheit hour</td>\n",
+       "      <td>Degree Fahrenheit Hour</td>\n",
+       "      <td>http://registry.it.csiro.au/def/qudt/1.1/qudt-...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------------------\n",
+      "Enter a string to predict:xxx\n"
+     ]
+    }
+   ],
    "source": [
     "user_input_loop(notebook=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "And that's that for the base functionality! \n",
+    "\n",
+    "The rest of the main program functions mostly concern themselves with dataset creation/manipulation. The web application has a page which allows the user to save their input to a training set, but this is currently not linked to re-running training with this training set (though it could be very straightforwadly extended to do so) as it's easy to give it bad data and would require human validation."
+   ]
   }
  ],
  "metadata": {
@@ -1454,7 +1682,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.5.5"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
